--- a/index.html
+++ b/index.html
@@ -31,6 +31,11 @@
                 <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Dolore quaerat aliquid unde modi possimus
                     voluptatem corporis incidunt in hic doloribus!</p>
             </article>
+            <article>
+                <h3>Concepto</h3>
+                <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Dolore quaerat aliquid unde modi possimus
+                    voluptatem corporis incidunt in hic doloribus!</p>
+            </article>
         </section>
     </main>
 
