--- a/index.html
+++ b/index.html
@@ -16,9 +16,9 @@
         </div>
         <nav>
             <ul>
-                <li><a href="#home"></a>Home</li>
-                <li><a href="#servicio"></a>Servicios</li>
-                <li><a href="#contactos"></a>Contactos</li>
+                <li><a href="home.html"></a>Home</li>
+                <li><a href="servicio.html"></a>Servicios</li>
+                <li><a href="contactos.html"></a>Contactos</li>
             </ul>
         </nav>
     </header>
